fixed accessibilty contrast issues

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -49,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Manrope', Tahoma, Geneva, Verdana, sans-serif;
   --background-colour: #F5F7FA;
   --primary-colour: #214984;
-  --secondary-colour: #838383;
+  --secondary-colour: #484848;
   --accent-colour: #E9F1FF;
   --border-colour: #dbd9d9d8;
   --card-background: #ffff;
